syntax = "proto3";

package click;
option java_package = "com.tencent.attribution.proto.click";

import "attribution/proto/user/user.proto";

message ClickLog {
  user.UserData user_data = 1;
  int64 click_time = 2;
  string app_id = 3;
}