syntax = "proto3";

package conv;
option java_package = "com.tencent.attribution.proto.conv";

import "github.com/TencentAd/attribution/attribution/proto/user/user.proto";
import "github.com/TencentAd/attribution/attribution/proto/click/click.proto";

message ConversionLog {
  user.UserData user_data = 1;
  int64 event_time = 2;
  string app_id = 3;
  string conv_id = 4;

  click.ClickLog match_click = 1000;
  string original_content = 1001; // 原始的信息
}